--- a/spaceport_web_player.html
+++ b/spaceport_web_player.html
@@ -1,5 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+		<title>  Spaceport Volumetric Web Player</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="./main.css">
+		<style>
+			body {
+				color: #222;
+			}
+
+			a {
+				color: #2fa1d6;
+			}
+
+			p {
+				max-width: 600px;
+				margin-left: auto;
+				margin-right: auto;
+				padding: 0 2em;
+			}
+		</style>
+  </head>
+  
+  <body>
+		<div id="info">
+			<a href="https://spaceport.tv/" target="_blank" rel="noopener">Spaceport</a> Volumetric Web Video Player<br />
+			<p>
+				Spaceport, next-generation video technology, is an end-to-end Volumetric Video Capturing and Streaming solution. Compatible with mobile devices, browsers, and VR goggles.
+			</p>
+			Developed by
+			<a href="https://antmedia.io/" target="_blank" rel="noopener">Ant Media</a>.<br />
+		</div>
 
 
     <script type="module">
