--- a/index.html
+++ b/index.html
@@ -43,328 +43,36 @@
 	</head>
 	<body>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener noreferrer">Ant Media</a> - Spaceport Web Player (<a href="https://spaceport.tv/" target="_blank" rel="noopener noreferrer">about</a>)<br/>
+			<a href="https://antmedia.io/" target="_blank" rel="noopener noreferrer">Ant Media</a> - Spaceport Web Player (<a href="https://spaceport.tv/" target="_blank" rel="noopener noreferrer">about</a>)<br/>
 			<p id="message">Your browser does not support OffscreenCanvas. Check the browser support <a href="https://caniuse.com/#feat=offscreencanvas" target="_blank" rel="noopener noreferrer">here</a></p>
 		</div>
 
 		<div id="container">
-			<canvas id="canvas2" style="width: 100%; height: 100%"></canvas>
+			<canvas id="offscreencanvas" style="width: 100%; height: 100%"></canvas>
 		</div>
 
-		<svg id="play"  viewBox="0 0 163 163" version="1.1" xmlns="http://www.w3.org/2000/svg" display="none"  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"="0px">
-			<g fill="none">
-				<g  transform="translate(2.000000, 2.000000)" stroke-width="4">
-					<path d="M10,80 C10,118.107648 40.8923523,149 79,149 L79,149 C117.107648,149 148,118.107648 148,80 C148,41.8923523 117.107648,11 79,11" id="lineOne" stroke="#A5CB43"></path>
-					<path d="M105.9,74.4158594 L67.2,44.2158594 C63.5,41.3158594 58,43.9158594 58,48.7158594 L58,109.015859 C58,113.715859 63.4,116.415859 67.2,113.515859 L105.9,83.3158594 C108.8,81.1158594 108.8,76.6158594 105.9,74.4158594 L105.9,74.4158594 Z" id="triangle" stroke="#A3CD3A"></path>
-					<path d="M159,79.5 C159,35.5933624 123.406638,0 79.5,0 C35.5933624,0 0,35.5933624 0,79.5 C0,123.406638 35.5933624,159 79.5,159 L79.5,159" id="lineTwo" stroke="#A5CB43"></path>
-				</g>
-			</g>
-		</svg>
 
-		
-
-	
-		<div id="myItem1"></div>
+		<div id="progressBar"></div>
 		<script type="text/javascript" src="loading-bar.js"></script>
-<script>
-  /* construct manually */
-  var bar1 = new ldBar("#myItem1");
-  /* ldBar stored in the element */
- // var bar2 = document.getElementById('myItem1').ldBar;
-  bar1.set(0);
-</script>
-
-<script type="text/javascript" src="main.js"></script>
+		<script>
+		/* construct manually */
+		var bar1 = new ldBar("#progressBar");
+		bar1.set(0);
+		</script>
+		<script type="text/javascript" src="main.js"></script>
+		
 	
 		<script type="module">
-			import { GUI } from 'https://cdn.jsdelivr.net/npm/three@0.121.1/examples/jsm/libs/dat.gui.module.js';
-			//import initJank from './jank.js';
-			//import init from './scene.js';
-			createGUI();
-
-	
-
-			const mouseEventHandler = makeSendPropertiesHandler([
-				'ctrlKey',
-				'metaKey',
-				'shiftKey',
-				'button',
-				'pointerType',
-				'clientX',
-				'clientY',
-				'pageX',
-				'pageY',
-			]);
-
-			const wheelEventHandlerImpl = makeSendPropertiesHandler([
-				'deltaX',
-				'deltaY',
-			]);
-
-			const keydownEventHandler = makeSendPropertiesHandler([
-				'ctrlKey',
-				'metaKey',
-				'shiftKey',
-				'keyCode',
-			]);
-
-			function wheelEventHandler(event, sendFn) {
-				event.preventDefault();
-				wheelEventHandlerImpl(event, sendFn);
-			}
-
-			function preventDefaultHandler(event) {
-				 event.preventDefault();
-				}
-
-			function copyProperties(src, properties, dst) {
-					for (const name of properties) {
-						dst[name] = src[name];
-					}
-				}
-
-			function makeSendPropertiesHandler(properties) {
-					return function sendProperties(event, sendFn) {
-						const data = {type: event.type};
-						copyProperties(event, properties, data);
-						sendFn(data);
-					};
-				}
-
-			function touchEventHandler(event, sendFn) {
- 
-			const touches = [];
-			
-			const data = {type: event.type, touches};
- 
-			for (let i = 0; i < event.touches.length; ++i) {
-    		
-				const touch = event.touches[i];
-				touches.push({
-      			pageX: touch.pageX,
-      			pageY: touch.pageY,
-			});
-		}
-		sendFn(data);
-	}
-
-			// The four arrow keys
-			const orbitKeys = {
-				  '37': true,  // left
-				  '38': true,  // up
-				  '39': true,  // right
-				  '40': true,  // down
-				};
-
-			
-				function filteredKeydownEventHandler(event, sendFn) {
-					const {keyCode} = event;
-					if (orbitKeys[keyCode]) {
-						event.preventDefault();
-						 keydownEventHandler(event, sendFn);
-						}
-					}
-
-			let nextProxyId = 0;
-			class ElementProxy {
-			constructor(element, worker, eventHandlers) {
-				this.id = nextProxyId++;
-				this.worker = worker;
-				const sendEvent = (data) => {
-				this.worker.postMessage({
-					type: 'event',
-					id: this.id,
-					data,
-				});
-			};
-			// register an id
-			worker.postMessage({
-				type: 'makeProxy',
-				id: this.id,
-			});
-			sendSize();
-			for (const [eventName, handler] of Object.entries(eventHandlers)) {
-				element.addEventListener(eventName, function(event) {
-					handler(event, sendEvent);
-				});
-				}
-
-   			 function sendSize() {
-      			const rect = element.getBoundingClientRect();
-     			 sendEvent({
-					   type: 'size',
-        			   left: rect.left,
-        			   top: rect.top,
-                       width: element.clientWidth,
-                       height: element.clientHeight,
-					});
-				}
-
-    // really need to use ResizeObserver
-    window.addEventListener('resize', sendSize);
-  }
-}
-
-			var worker;
-			function main(){
-			//const canvas1 = document.getElementById( 'canvas1' );
-			document.getElementById("play").addEventListener("click", play);
-			const canvas2 = document.getElementById( 'canvas2' );
-			const width = canvas2.clientWidth;
-			const height = canvas2.clientHeight;
-			const pixelRatio = window.devicePixelRatio;
-			var progresBar=0;
+		import { main } from './handler.js';
+		import { createGUI } from './handler.js';
+		//import { createGUI } from './handler.js';
+		var worker;
 		
-			function progress(){
-				progresBar++;
-				bar1.set(progresBar);
-				if(progresBar==100){
-					document.getElementById("myItem1").setAttribute("hidden","");
-					document.getElementById("play").style.display = "block";
-		}
-			}
 
-
-
-			// offscreen
-			if ( 'transferControlToOffscreen' in canvas2 ) {
-				const offscreen = canvas2.transferControlToOffscreen();
-				worker = new Worker( 'offscreen.js', { type: 'module' } );
-				worker.onmessage = function(e) {
-				if(e.data.type=="progress"){
-					progresBar++;
-						bar1.set(progresBar);
-						if(progresBar==100){
-							document.getElementById("myItem1").setAttribute("hidden","");
-							document.getElementById("play").style.display = "block";
-				}
-			
-		 }if(e.data.type=="audio"){
-
-			var audioData = e.data.audata;
-            audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-            var sourceTemp = audioCtx.createBufferSource();
-            audioCtx.decodeAudioData(audioData, function(buffer) {
-            allAudio.push(buffer); 
-             });
-		 }
-
-        } 
-
-		 const eventHandlers = {
-			contextmenu: preventDefaultHandler,
-    		mousedown: mouseEventHandler,
-			mousemove: mouseEventHandler,
-			mouseup: mouseEventHandler,
-			pointerdown: mouseEventHandler,
-			pointermove: mouseEventHandler,
-			pointerup: mouseEventHandler,
-			touchstart: touchEventHandler,
-			touchmove: touchEventHandler,
-			touchend: touchEventHandler,
-			wheel: wheelEventHandler,
-			keydown: filteredKeydownEventHandler,
-		 };
-
-	const proxy = new ElementProxy(canvas2, worker, eventHandlers);
-
-	worker.postMessage( {
-		drawingSurface: offscreen,
-		width: canvas2.clientWidth,
-		height: canvas2.clientHeight,
-		pixelRatio: window.devicePixelRatio,
-		path: '../../',
-		type: 'start',
-		canvas: offscreen,
-		canvasId: proxy.id,
-		}, [ offscreen ] );
-
-	} else {
-		document.getElementById( 'message' ).style.display = 'block';
-	}
-}
-
-function play(){
-	document.getElementById("play").style.display="none";
-	playAudio();
-	worker.postMessage({
-				type: 'ui',
-				play: `true`,
-				});
-}
-
-function createGUI(){
-	const api = { demo: 'Demo - I' };
-	const sceneApi = { scene: 'Empty' };
-	const volumeApi = { volume: 0.2};
-	var gui = new GUI();
-	const demos = [ 'Demo - I'];
-	const emotes = [ 'Play', 'Stop', 'Replay'];
-	const stages = ['Empty', 'Stage - I'];
-	const demosFolder = gui.addFolder( 'Demos' );
-	const emotesFolder = gui.addFolder( 'State')
-	const stagesFolder = gui.addFolder( 'Scene')
-	const volumeFolder = gui.addFolder( 'Volume' );
-
-	volumeFolder.add( volumeApi, 'volume', 0.0, 1, 0.01 ).onChange( modifyTimeScale );
-	const demoCtrl = demosFolder.add( api, 'demo' ).options( demos );
-	demoCtrl.onChange( function () {
-
-		worker.postMessage({
-				type: 'gui',
-				sample: api.demo,
-				state : 'Play',
-				stage : sceneApi.scene,
-				});
-
-} );
-
-    //api = { scene: 'Stage - I' };
+		
 	
-	var sceneCtrl = stagesFolder.add( sceneApi, 'scene' ).options( stages );
-	sceneCtrl.onChange( function () {
-        worker.postMessage({
-		type: 'gui',
-		sample: api.demo,
-		state : 'Stop',
-		stage : sceneApi.scene
-		});
-
-} );
-
-function modifyTimeScale( speed ) {
-
-	setAudioLevel(speed);
-
-}
-
-function createEmoteCallback( name ) {
-		api[ name ] = function () {
-			if(name=="Stop"){
-				stopAudio();
-			}
-			worker.postMessage({
-				type: 'gui',
-				sample: api.demo,
-				state: name,
-				stage : sceneApi.scene
-				});
-		};
-	
-		emotesFolder.add( api, name );
-}
-
-for ( let i = 0; i < emotes.length; i ++ ) {
-createEmoteCallback( emotes[ i ] );
-}
-
-
-	
-	
-
-}
-
-			main();
+		main(worker);
+		//createGUI();
 
 		</script>
 	</body>
