--- a/index.html
+++ b/index.html
@@ -53,27 +53,17 @@
 
 
 		<div id="progressBar"></div>
+		<script type="text/javascript" src="main.js"></script>
 		<script type="text/javascript" src="loading-bar.js"></script>
 		<script>
 		/* construct manually */
 		var bar1 = new ldBar("#progressBar");
 		bar1.set(0);
 		</script>
-		<script type="text/javascript" src="main.js"></script>
-		
-	
 		<script type="module">
 		import { main } from './handler.js';
-		import { createGUI } from './handler.js';
-		//import { createGUI } from './handler.js';
-		var worker;
+		main();
 		
-
-		
-	
-		main(worker);
-		//createGUI();
-
 		</script>
 	</body>
 </html>
