move the scripts to js file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Spaceport Volumetric Web Player</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="./main.css">
+		<link type="text/css" rel="stylesheet" href="./css/main.css">
 		<style>
 			body {
 				
@@ -51,11 +51,11 @@
 			<canvas id="offscreencanvas" style="width: 100%; height: 100%"></canvas>
 		</div>
 		<div id="progressBar"></div>
-		<script type="text/javascript" src="main.js"></script>
-		<script type="text/javascript" src="loading-bar.js"></script>
+		<script type="text/javascript" src="./js/main.js"></script>
+		<script type="text/javascript" src="./js/loading-bar.js"></script>
 	
 		<script type="module">
-		import { main } from './handler.js';
+		import { main } from './js/handler.js';
 		main();
 		
 		</script>
