fix play button position

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		import { playMessage } from './js/gui.js';
 
 	    var box = document.getElementById( 'playPauseButton' );
-		box.style.visibility= "hidden";
+		//box.style.visibility= "hidden";
 		box.addEventListener('click', (e)=>{
 			playMessage("Play");
 			box.style.visibility= "hidden";
